Fixed spacing

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -14,7 +14,7 @@ $headshot-height: 200px;
 }
 
 .jumbotron {
-    margin: 250px 0px 0px 0px;
+    margin: 183px 0px 0px 0px;
     padding: 0px 0px;
     background: white;
 }
